--- a/defense.tex
+++ b/defense.tex
@@ -113,9 +113,9 @@
 
 %\input{defense-p1-utility}
 
-%\input{defense-p2-lazysp}
+\input{defense-p2-lazysp}
 
-\input{defense-p3-ibid}
+%\input{defense-p3-ibid}
 
 %\input{defense-p4-utility-results}
 
