updated talk outline slides

--- a/defense-p0-intro.tex
+++ b/defense-p0-intro.tex
@@ -569,3 +569,14 @@
 
    \end{tikzpicture}
 \end{frame}
+
+\begin{frame}
+   \frametitle{Thesis}
+   \begin{tikzpicture}[font=\small]
+   \tikzset{>=latex} % arrow heads
+   \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
+
+      \node at (6,4) {From Sidd: state a thesis.};
+
+   \end{tikzpicture}
+\end{frame}
