--- a/defense.tex
+++ b/defense.tex
@@ -1,7 +1,7 @@
 \documentclass[serif,10pt]{beamer}
 
 \def\gridopacity{100}
-%\def\gridopacity{0}
+\def\gridopacity{0}
 
 \usepackage{multimedia}
 
@@ -109,19 +109,19 @@
    %\end{columns}
 \end{frame}
 
-%\input{defense-p0-intro}
+\input{defense-p0-intro}
 
-%\input{defense-p1-utility}
+\input{defense-p1-utility}
 
 \input{defense-p2-lazysp}
 
-%\input{defense-p3-ibid}
+\input{defense-p3-ibid}
 
-%\input{defense-p4-utility-results}
+\input{defense-p4-utility-results}
 
-%\input{defense-p5-family}
+\input{defense-p5-family}
 
-%\input{defense-p6-conclusion}
+\input{defense-p6-conclusion}
 
 {
 \setbeamercolor{background canvas}{bg=black}
