--- a/defense-p2-lazysp.tex
+++ b/defense-p2-lazysp.tex
@@ -1,36 +1,94 @@
 \begin{frame}
    \frametitle{Talk Outline}
    \begin{tikzpicture}[font=\small]
-      \tikzset{>=latex} % arrow heads
-      \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
+   \tikzset{>=latex} % arrow heads
+   \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
 
-      \node[fill=blue!15,minimum width=11cm] at (6,7.5) {\strut What to Optimize?};
+   % START LEMUR
+   \node[fill=blue!5,draw=blue!10,rounded corners,minimum width=9.7cm,minimum height=5.8cm,anchor=north] (lemur) at (6,6.0) {};
+   \node[anchor=north west] at (lemur.north west) {Planner};
 
-      \node[fill=black!3,minimum width=5cm,minimum height=3cm] (utility) at (3.25,5.6) {};
-      \node[anchor=north] at (utility.north) {\strut Maximizing Utility};
-      \node at (3.25,5.35) {\includegraphics[width=2.5cm]{build/pvx-utility-anytime}};
+   % left side
+   \only<3->{
+      \node[fill=blue!10,draw=blue!20,rounded corners,align=center,minimum height=1.5cm,minimum width=2.5cm,inner sep=0pt] at (3.3,4.5) {};
+      \node at (3.3,4.5) {\includegraphics[width=1.8cm]{build/roadmap-stack-short}};
+      \draw[->] (3.3,3.75) -- (3.3,3.0) node [pos=0.45,fill=blue!5,align=center,inner sep=2pt] {$G$};
+   }
 
-      \node[fill=black!3,minimum width=5cm,minimum height=3cm] (family) at (8.75,5.6) {};
-      \node[anchor=north] at (family.north) {\strut Utility in C-Space Familes};
-      \node at (8.75,5.4) {\includegraphics[width=3.0cm]{build/multiple-sets}};
+   % right side
+   \only<5->{
+   \node[fill=blue!10,draw=blue!20,rounded corners,align=center,minimum height=1.5cm,inner sep=0pt] at (7.8,4.5) {
+         \qquad\qquad\; $ \arraycolsep=1.5pt \begin{array}{rcc}
+            w_{\ms{est}}(e) = & \lambda \, \grave{p}(e) \; + & (1\!-\!\lambda) \, \hat{x}(e) \\
+            w(e) = & & (1\!-\!\lambda) \, x(e)
+         \end{array} $
+      };
+      %\node[fill=black!3,draw=blue!20,inner sep=2pt] at (7,5.4) {\includegraphics[width=1.3cm]{build/pvx-utility-anytime-simple}};
+      \node[fill=black!3,draw=blue!20,inner sep=2pt] at (5.6,4.5) {\includegraphics[width=1.0cm]{build/pvx-linear-discounting-simple}};
 
-      \node[fill=blue!15,minimum width=11cm] at (6,3.5) {\strut How to Optimize?};
+      \draw[->] (7.3,3.75) -- (7.3,3.0) node [pos=0.45,fill=blue!5,align=center,inner sep=2pt] {$w$};
+      \draw[->] (8.2,3.75) -- (8.2,3.0) node [pos=0.45,fill=blue!5,align=center,inner sep=2pt] {$w_{\ms{est}}$};
+   }
+   
+   % START LAZYSP
+   \node[fill=blue!10,draw=blue!20,rounded corners,minimum width=7cm,minimum height=2.5cm,anchor=north] (lazysp) at (6,3.0) {};
+   \node[align=center] at (4,2.4) {Lazy\\Pathfinding};
 
-      \node[fill=black!3,minimum width=5cm,minimum height=3cm] (lazysp) at (3.25,1.6) {};
-      \node[anchor=north] at (lazysp.north) {\strut Lazy Pathfinding};
-      \node[draw=black!30,fill=white,inner sep=5pt] at (3.25,1.4) {
-         \includegraphics[width=3.8cm]{build/lazysp-icon}};
+   \node[draw=black!30,fill=white,inner sep=5pt] at (4,1.4) {
+      \includegraphics[width=2.0cm]{build/lazysp-icon}};
 
-      \node[fill=black!3,minimum width=5cm,minimum height=3cm] (ibid) at (8.75,1.6) {};
-      \node[anchor=north] at (ibid.north) {\strut Dynamic Pathfinding};
-      \node[draw=black!30,inner sep=0pt] at (8.75,1.4) {
-         \includegraphics[width=2.9cm]{figs/incbi-road-ne/singleshot/example-bidijkstra.png}};
+   \node[fill=blue!20,draw=blue!30,rounded corners,align=center,minimum width=3.3cm,minimum height=2.1cm,anchor=north] (dynsp) at (7.5,2.8) {};
+   \node[anchor=north west] at (dynsp.north west) {\begin{minipage}{3.1cm}Dynamic Pathfinding\end{minipage}};
+   \node[draw=black!30,inner sep=0pt] at (7.5,1.55) {
+      \includegraphics[width=2.0cm]{figs/incbi-road-ne/singleshot/example-bidijkstra.png}};
 
-      \only<2>
-      {
-         \draw[ultra thick] (lazysp.north east) rectangle (lazysp.south west);
-      }
-      
+   % END LAZYSP
+
+   % END LEMUR
+
+   % top left side
+   \only<2->{
+      \node[fill=blue!10,draw=blue!20,rounded corners,align=center,minimum height=1.5cm,minimum width=1.8cm,inner sep=0pt] at (3.3,7.0) {};
+      \node[fill=white,inner sep=0pt] at (3.3,7.0) {\includegraphics[width=1.4cm]{build/c-space-simple}};
+      \node[font=\scriptsize] at (2.95,6.7) {$\mathcal{C}_{\mbox{\tiny free}}$};
+   }
+   \only<3->{
+      \draw[->] (3.3,6.25) -- (3.3,5.25) node [pos=0.55,fill=blue!5,align=center,inner sep=0pt] {\strut $\mathcal{C}$};
+   }
+
+   %\node[inner sep=4pt] (cspace) at (3.3,7.0) {$\mathcal{C}$-Space};
+   %\draw[->] (cspace) -- (3.3,5.25);
+   
+   % top right side
+   \only<4->{
+      \node[fill=blue!10,draw=blue!20,rounded corners,align=center,minimum height=1.5cm] at (7.9,7)
+      {$\arraycolsep=1.5pt \begin{array}{cl}
+         x(\xi)\!: & \mbox{execution cost} \;(\mathcal{C}_{\ms{free}}) \\
+         \hat{x}(\xi)\!: & \mbox{execution cost estimate} \\
+         \grave{p}(\xi)\!: & \mbox{planning cost estimate}
+      \end{array}$};
+   }
+
+   \only<5->{
+      \draw[->] (7.3,6.25) -- (7.3,5.25) node [pos=0.55,fill=blue!5,align=center,inner sep=0pt] {\strut $x$};
+      \draw[->] (7.9,6.25) -- (7.9,5.25) node [pos=0.55,fill=blue!5,align=center,inner sep=0pt] {\strut $\hat{x}$};
+      \draw[->] (8.5,6.25) -- (8.5,5.25) node [pos=0.55,fill=blue!5,align=center,inner sep=0pt] {\strut $\grave{p}$};
+   }
+
+   % left side
+   \draw[->] (0.5,2.0) -- (2.5,2.0);
+   \node[fill=white,align=center,inner sep=2pt] at (0.5,2.0)
+      {$q_{\ms{start}}$\\$q_{\ms{dest}}$};
+
+   % right side
+   \draw[->] (9.5,2.0) -- (11.3,2.0);
+   \node[fill=white,align=center,inner sep=2pt] at (11.5,2.0)
+      {$\xi$};
+
+   \only<6->{
+      \draw[thick,rounded corners] (lazysp.south west) rectangle (lazysp.north east);
+   }
+
    \end{tikzpicture}
 \end{frame}
 
@@ -3106,5 +3164,3 @@ Partition   0.04  1.54  4.21 0.28
    
    \end{tikzpicture}
 \end{frame}
-
-
