--- a/defense-p1-utility.tex
+++ b/defense-p1-utility.tex
@@ -209,43 +209,144 @@
    \end{tikzpicture}
 \end{frame}
 
+
 \begin{frame}
-   \frametitle{Maximizing Utility over Paths Algorithm Outline}
+   \frametitle{Algorithm Outline: Maximizing Utility over Paths}
    \begin{tikzpicture}[font=\small]
       \tikzset{>=latex} % arrow heads
       \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
 
-      \node[fill=blue!5,rounded corners,anchor=north,minimum width=9.5cm,minimum height=3.3cm] (alg) at (6,7.75) {};
+      \only<2->{
+      \node[fill=blue!5,rounded corners,anchor=north,minimum width=9.5cm,minimum height=3.6cm] (alg) at (6,7.75) {};
+      \begin{scope} % highlights
+         \clip[rounded corners] (alg.north west) rectangle (alg.south east);
+         \only<2>{\node[fill=blue!15,anchor=north,minimum width=9.5cm,minimum height=0.5cm,below=0cm of alg.north] {};} % pinit
+         \only<3>{\node[fill=blue!15,anchor=north,minimum width=9.5cm,minimum height=0.45cm,below=0.4cm of alg.north] {};} % iters
+         \only<4,10,14>{\node[fill=blue!15,anchor=north,minimum width=9.5cm,minimum height=0.45cm,below=0.8cm of alg.north] {};} % pathset
+         \only<5>{\node[fill=blue!15,anchor=north,minimum width=9.5cm,minimum height=0.9cm,below=1.2cm of alg.north] {};} % estimators
+         \only<6,11,15>{\node[fill=blue!15,anchor=north,minimum width=9.5cm,minimum height=0.45cm,below=2.0cm of alg.north] {};} % argmin
+         \only<7,16>{\node[fill=blue!15,anchor=north,minimum width=9.5cm,minimum height=0.45cm,below=2.35cm of alg.north] {};} % return
+         \only<8,12>{\node[fill=blue!15,anchor=north,minimum width=9.5cm,minimum height=0.45cm,below=2.75cm of alg.north] {};} % eval
+         \only<9,13>{\node[fill=blue!15,anchor=north,minimum width=9.5cm,minimum height=0.45cm,below=3.15cm of alg.north] {};} % updatep
+      \end{scope}
       \node[left=0.1cm of alg.north,anchor=north] {\begin{minipage}{9cm}
          \begin{algorithmic}[1]
+         \State $p_0 \leftarrow 0$
+            \Comment planning cost incurred so far
+         \only<3->{
          \For {iteration $i \in 1, 2, \dots$}
-            \State $\bar{p}_i \leftarrow$
-               planning cost incurred so far
+            \only<4->{
             \State $\Xi_i \leftarrow$ set of paths to consider at iteration $i$
-            \State $\grave{p}_i : \Xi_i \rightarrow \mathbb{R}^+$
-               \Comment additional planning cost estimator
+            }%
+            \only<5->{
             \State $\hat{x}_i : \Xi_i \rightarrow \mathbb{R}^+$
                \Comment execution cost estimator
+            \State $\hat{p}_i : \Xi_i \rightarrow \mathbb{R}^+$
+               \Comment additional planning cost estimator%
+            }%
+            \only<6->{
             \State $\xi_i = \argmax_{\xi \in \Xi_i}
-               U\!\left( \; \bar{p}_i \! + \! \grave{p}_i(\xi), \; \hat{x}_i(\xi) \; \right)$
+               U\!\left( \; p_{i-1} \! + \! \hat{p}_i(\xi), \; \hat{x}_i(\xi) \; \right)$
+               \label{line:outline-argmax}
+            }%
+            \only<7->{
+            \State \Return $\xi_i$
+               if $\xi_i$ fully evaluated, i.e. $\hat{p}(\xi) = 0$
+            }%
+            \only<8->{
+            \State evaluate $\xi_i$
+               \Comment incurs planning cost $\Delta p_i$
+            }%
+            \only<9->{
+            \State $p_i \leftarrow p_{i-1} + \Delta p_i$
+            }%
+         \EndFor
+         }
+         \end{algorithmic}
+      \end{minipage}};
+      }
+
+      \only<1-3>{\node at (3.5,2.0) {\includegraphics{build/cspace-utility-intro,start}};}
+      \only<4-5>{\node at (3.5,2.0) {\includegraphics{build/cspace-utility-intro,candidatesa}};}
+      \only<6-7>{\node at (3.5,2.0) {\includegraphics{build/cspace-utility-intro,candidatea}};}
+      \only<8-9>{\node at (3.5,2.0) {\includegraphics{build/cspace-utility-intro,candidateaevaled}};}
+      \only<10>{\node at (3.5,2.0) {\includegraphics{build/cspace-utility-intro,candidatesb}};}
+      \only<11>{\node at (3.5,2.0) {\includegraphics{build/cspace-utility-intro,candidateb}};}
+      \only<12-13>{\node at (3.5,2.0) {\includegraphics{build/cspace-utility-intro,candidatebevaled}};}
+      \only<14>{\node at (3.5,2.0) {\includegraphics{build/cspace-utility-intro,candidatesfinal}};}
+      \only<15->{\node at (3.5,2.0) {\includegraphics{build/cspace-utility-intro,candidatefinal}};}
+
+      \only<2>{\node at (9.0,2.0) {\includegraphics{build/p-estimates-build,start}};}
+      \only<3-5>{\node at (9.0,2.0) {\includegraphics{build/p-estimates-build,iterlabel}};}
+      \only<6-7>{\node at (9.0,2.0) {\includegraphics{build/p-estimates-build,candidatea}};}
+      \only<8>{\node at (9.0,2.0) {\includegraphics{build/p-estimates-build,candidateadelta}};}
+      \only<9-10>{\node at (9.0,2.0) {\includegraphics{build/p-estimates-build,candidateaeval}};}
+      \only<11>{\node at (9.0,2.0) {\includegraphics{build/p-estimates-build,candidateb}};}
+      \only<12>{\node at (9.0,2.0) {\includegraphics{build/p-estimates-build,candidatebdelta}};}
+      \only<13>{\node at (9.0,2.0) {\includegraphics{build/p-estimates-build,candidatebeval}};}
+      \only<14-15>{\node at (9.0,2.0) {\includegraphics{build/p-estimates-build,prefinal}};}
+      \only<16>{\node at (9.0,2.0) {\includegraphics{build/p-estimates-build,final}};}
+
+   \end{tikzpicture}
+\end{frame}
+
+\begin{frame}
+   \frametitle{Aside: Simplified Bidirectional RRT-Connect}
+   \begin{tikzpicture}[font=\small]
+      \tikzset{>=latex} % arrow heads
+      \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
+
+      \node[fill=blue!5,rounded corners,anchor=north,minimum width=9.5cm,minimum height=3.6cm] (alg) at (6,7.75) {};
+      \begin{scope} % highlights
+         \clip[rounded corners] (alg.north west) rectangle (alg.south east);
+         %\only<2>{\node[fill=blue!15,anchor=north,minimum width=9.5cm,minimum height=0.5cm,below=0cm of alg.north] {};} % pinit
+         %\only<3>{\node[fill=blue!15,anchor=north,minimum width=9.5cm,minimum height=0.45cm,below=0.4cm of alg.north] {};} % iters
+         \only<4>{\node[fill=blue!15,anchor=north,minimum width=9.5cm,minimum height=0.45cm,below=0.8cm of alg.north] {};} % pathset
+         %\only<5>{\node[fill=blue!15,anchor=north,minimum width=9.5cm,minimum height=0.9cm,below=1.2cm of alg.north] {};} % estimators
+         \only<5->{\node[fill=blue!15,anchor=north,minimum width=9.5cm,minimum height=0.45cm,below=2.0cm of alg.north] {};} % argmin
+         %\only<7,16>{\node[fill=blue!15,anchor=north,minimum width=9.5cm,minimum height=0.45cm,below=2.35cm of alg.north] {};} % return
+         %\only<8,12>{\node[fill=blue!15,anchor=north,minimum width=9.5cm,minimum height=0.45cm,below=2.75cm of alg.north] {};} % eval
+         %\only<9,13>{\node[fill=blue!15,anchor=north,minimum width=9.5cm,minimum height=0.45cm,below=3.15cm of alg.north] {};} % updatep
+      \end{scope}
+      \node[left=0.1cm of alg.north,anchor=north] {\begin{minipage}{9cm}
+         \begin{algorithmic}[1]
+         \State $p_0 \leftarrow 0$
+            \Comment planning cost incurred so far
+         \For {iteration $i \in 1, 2, \dots$}
+            \State $\Xi_i \leftarrow$ set of paths to consider at iteration $i$
+            \State $\hat{x}_i : \Xi_i \rightarrow \mathbb{R}^+$
+               \Comment execution cost estimator
+            \State $\hat{p}_i : \Xi_i \rightarrow \mathbb{R}^+$
+               \Comment additional planning cost estimator
+            \State $\xi_i = \argmax_{\xi \in \Xi_i}
+               U\!\left( \; p_{i-1} \! + \! \hat{p}_i(\xi), \; \hat{x}_i(\xi) \; \right)$
                \label{line:outline-argmax}
             \State \Return $\xi_i$
-               if $\xi_i$ fully evaluated, i.e. $\grave{p}(\xi) = 0$
+               if $\xi_i$ fully evaluated, i.e. $\hat{p}(\xi) = 0$
             \State evaluate $\xi_i$
-               \Comment incurs requisite planning cost
+               \Comment incurs planning cost $\Delta p_i$
+            \State $p_i \leftarrow p_{i-1} + \Delta p_i$
          \EndFor
          \end{algorithmic}
       \end{minipage}};
 
-      \only<1>{\node at (6.0,2.0) {\includegraphics{build/p-estimates}};}
-
-      \only<2>{\node at (3.7,2.0) {\includegraphics{build/rrt-build,stonly}};}
-      \only<3>{\node at (3.7,2.0) {\includegraphics{build/rrt-build,stexisting}};}
-      \only<4>{\node at (3.7,2.0) {\includegraphics{build/rrt-build,target}};}
-      \only<5-6>{\node at (3.7,2.0) {\includegraphics{build/rrt-build,otherpaths}};}
-      \only<7>{\node at (3.7,2.0) {\includegraphics{build/rrt-build,all}};}
+      \only<1>{\node at (3.7,2.0) {\includegraphics{build/rrt-build,stonly}};}
+      \only<2>{\node at (3.7,2.0) {\includegraphics{build/rrt-build,stexisting}};}
+      \only<3>{\node at (3.7,2.0) {\includegraphics{build/rrt-build,target}};}
+      \only<4-5>{\node at (3.7,2.0) {\includegraphics{build/rrt-build,otherpaths}};}
+      \only<6->{\node at (3.7,2.0) {\includegraphics{build/rrt-build,all}};}
       
       \only<6->{\node at (8.7,2.0) {\includegraphics{build/pvx-rrt}};}
+
+      \only<7>{
+         \node[fill=white,opacity=0.8,text opacity=1.0,inner sep=5pt,rounded corners] at (6,4.2) {
+         \begin{tikzpicture}
+         \node[fill=black!5,draw=black!15,rounded corners,align=center]
+            {RRT-Connect implicitly maximizes utility at each iteration\\
+            using the first-feasible utility function.};
+         \end{tikzpicture}
+         };
+      }
 
    \end{tikzpicture}
 \end{frame}
@@ -258,27 +359,36 @@
       %\node[fill=blue!15,minimum width=11cm] at (6,7.5) {\strut How to Optimize?};
       %\node[fill=blue!15,minimum width=11cm] at (6,6.75) {\strut What to Optimize?};
 
-      \node[fill=blue!5,rounded corners,anchor=north,minimum width=9.5cm,minimum height=3.3cm] (alg) at (6,7.75) {};
-      \only<2->{
-         \node[fill=blue!20,below=0.83cm of alg.north,minimum width=9.5cm,minimum height=0.4cm] {};
-      }
+      \node[fill=blue!5,rounded corners,anchor=north,minimum width=9.5cm,minimum height=3.6cm] (alg) at (6,7.75) {};
+      \begin{scope} % highlights
+         \clip[rounded corners] (alg.north west) rectangle (alg.south east);
+         %\only<2>{\node[fill=blue!15,anchor=north,minimum width=9.5cm,minimum height=0.5cm,below=0cm of alg.north] {};} % pinit
+         %\only<3>{\node[fill=blue!15,anchor=north,minimum width=9.5cm,minimum height=0.45cm,below=0.4cm of alg.north] {};} % iters
+         \only<2-3>{\node[fill=blue!15,anchor=north,minimum width=9.5cm,minimum height=0.45cm,below=0.8cm of alg.north] {};} % pathset
+         %\only<5>{\node[fill=blue!15,anchor=north,minimum width=9.5cm,minimum height=0.9cm,below=1.2cm of alg.north] {};} % estimators
+         %\only<5->{\node[fill=blue!15,anchor=north,minimum width=9.5cm,minimum height=0.45cm,below=2.0cm of alg.north] {};} % argmin
+         %\only<7,16>{\node[fill=blue!15,anchor=north,minimum width=9.5cm,minimum height=0.45cm,below=2.35cm of alg.north] {};} % return
+         %\only<8,12>{\node[fill=blue!15,anchor=north,minimum width=9.5cm,minimum height=0.45cm,below=2.75cm of alg.north] {};} % eval
+         %\only<9,13>{\node[fill=blue!15,anchor=north,minimum width=9.5cm,minimum height=0.45cm,below=3.15cm of alg.north] {};} % updatep
+      \end{scope}
       \node[left=0.1cm of alg.north,anchor=north] {\begin{minipage}{9cm}
          \begin{algorithmic}[1]
+         \State $p_0 \leftarrow 0$
+            \Comment planning cost incurred so far
          \For {iteration $i \in 1, 2, \dots$}
-            \State $\bar{p}_i \leftarrow$
-               planning cost incurred so far
             \State $\Xi_i \leftarrow$ set of paths to consider at iteration $i$
-            \State $\grave{p}_i : \Xi_i \rightarrow \mathbb{R}^+$
-               \Comment additional planning cost estimator
             \State $\hat{x}_i : \Xi_i \rightarrow \mathbb{R}^+$
                \Comment execution cost estimator
+            \State $\hat{p}_i : \Xi_i \rightarrow \mathbb{R}^+$
+               \Comment additional planning cost estimator
             \State $\xi_i = \argmax_{\xi \in \Xi_i}
-               U\!\left( \; \bar{p}_i \! + \! \grave{p}_i(\xi), \; \hat{x}_i(\xi) \; \right)$
+               U\!\left( \; p_{i-1} \! + \! \hat{p}_i(\xi), \; \hat{x}_i(\xi) \; \right)$
                \label{line:outline-argmax}
             \State \Return $\xi_i$
-               if $\xi_i$ fully evaluated, i.e. $\grave{p}(\xi) = 0$
+               if $\xi_i$ fully evaluated, i.e. $\hat{p}(\xi) = 0$
             \State evaluate $\xi_i$
-               \Comment incurs requisite planning cost
+               \Comment incurs planning cost $\Delta p_i$
+            \State $p_i \leftarrow p_{i-1} + \Delta p_i$
          \EndFor
          \end{algorithmic}
       \end{minipage}};
@@ -318,42 +428,54 @@
       %\node[fill=blue!15,minimum width=11cm] at (6,7.5) {\strut How to Optimize?};
       %\node[fill=blue!15,minimum width=11cm] at (6,6.75) {\strut What to Optimize?};
 
-      \node[fill=blue!5,rounded corners,anchor=north,minimum width=9.5cm,minimum height=3.3cm] (alg) at (6,7.75) {};
-      \only<2->{
-         \node[fill=blue!20,below=1.99cm of alg.north,minimum width=9.5cm,minimum height=0.43cm] {};
-      }
+      \node[fill=blue!5,rounded corners,anchor=north,minimum width=9.5cm,minimum height=3.6cm] (alg) at (6,7.75) {};
+      \begin{scope} % highlights
+         \clip[rounded corners] (alg.north west) rectangle (alg.south east);
+         %\only<2>{\node[fill=blue!15,anchor=north,minimum width=9.5cm,minimum height=0.5cm,below=0cm of alg.north] {};} % pinit
+         %\only<3>{\node[fill=blue!15,anchor=north,minimum width=9.5cm,minimum height=0.45cm,below=0.4cm of alg.north] {};} % iters
+         \only<3>{\node[fill=blue!15,anchor=north,minimum width=9.5cm,minimum height=0.45cm,below=0.8cm of alg.north] {};} % pathset
+         \only<3>{\node[fill=blue!15,anchor=north,minimum width=9.5cm,minimum height=0.9cm,below=1.2cm of alg.north] {};} % estimators
+         \only<4,8->{\node[fill=blue!15,anchor=north,minimum width=9.5cm,minimum height=0.45cm,below=2.0cm of alg.north] {};} % argmin
+         %\only<7,16>{\node[fill=blue!15,anchor=north,minimum width=9.5cm,minimum height=0.45cm,below=2.35cm of alg.north] {};} % return
+         \only<5-7>{\node[fill=blue!15,anchor=north,minimum width=9.5cm,minimum height=0.45cm,below=2.75cm of alg.north] {};} % eval
+         %\only<9,13>{\node[fill=blue!15,anchor=north,minimum width=9.5cm,minimum height=0.45cm,below=3.15cm of alg.north] {};} % updatep
+      \end{scope}
       \node[left=0.1cm of alg.north,anchor=north] {\begin{minipage}{9cm}
          \begin{algorithmic}[1]
+         \State $p_0 \leftarrow 0$
+            \Comment planning cost incurred so far
          \For {iteration $i \in 1, 2, \dots$}
-            \State $\bar{p}_i \leftarrow$
-               planning cost incurred so far
             \State $\Xi_i \leftarrow$ set of paths to consider at iteration $i$
-            \State $\grave{p}_i : \Xi_i \rightarrow \mathbb{R}^+$
-               \Comment additional planning cost estimator
             \State $\hat{x}_i : \Xi_i \rightarrow \mathbb{R}^+$
                \Comment execution cost estimator
-            \State $\xi_i = \argmax_{\xi \in \Xi_i}
-               U\!\left( \; \bar{p}_i \! + \! \grave{p}_i(\xi), \; \hat{x}_i(\xi) \; \right)$
-               \label{line:outline-argmax}
+            \State $\hat{p}_i : \Xi_i \rightarrow \mathbb{R}^+$
+               \Comment additional planning cost estimator
+            \only<1-8>{\State $\xi_i = \argmax_{\xi \in \Xi_i}
+               U\!\left( \; p_{i-1} \! + \! \hat{p}_i(\xi), \; \hat{x}_i(\xi) \; \right)$
+               \label{line:outline-argmax}}%
+            \only<9->{\State $\xi_i = \argmax_{\xi \in \Xi_i}
+               U\!\left( \; \hat{p}_i(\xi), \; \hat{x}_i(\xi) \; \right)$
+               \label{line:outline-argmax}}%
             \State \Return $\xi_i$
-               if $\xi_i$ fully evaluated, i.e. $\grave{p}(\xi) = 0$
+               if $\xi_i$ fully evaluated, i.e. $\hat{p}(\xi) = 0$
             \State evaluate $\xi_i$
-               \Comment incurs requisite planning cost
+               \Comment incurs planning cost $\Delta p_i$
+            \State $p_i \leftarrow p_{i-1} + \Delta p_i$
          \EndFor
          \end{algorithmic}
       \end{minipage}};
 
-      \only<3->{
+      \only<2->{
          \node[fill=black!3,draw=black!6,rounded corners] at (3.0,3.0)
          {\begin{minipage}{4.9cm}
             We consider \emph{linear utility functions}:
             \vspace{-0.2cm}
             \[
-               -U(p,x) = \lambda_U \, p + (1 - \lambda_U) \, x
+               -U(p,x) = \lambda \, p + (1 - \lambda) \, x
             \]
          \end{minipage}};
       }
-      \only<5->{
+      \only<10->{
          \node[fill=black!3,draw=black!6,rounded corners] at (8.7,3.0) {\begin{minipage}{5.6cm}
             We consider \emph{additive estimators}:
             \vspace{-0.2cm}
@@ -362,32 +484,35 @@
             \]
             \vspace{-0.5cm}
             \[
-               \grave{p}_i(\xi) = \sum_{e \in \xi} \grave{p}_i(e)
+               \grave{p}_i(\xi) = \sum_{e \in \xi} \hat{p}_i(e)
                \;\;\mbox{and}\;\;
                \hat{x}_i(\xi) = \sum_{e \in \xi} \hat{x}_i(e)
             \]
          \end{minipage}};
       }
 
-      \only<4>{
-         %\node at (9.06,2.25) {\includegraphics[width=3.75cm]{build/pvx-linear-discounting}};
-         \node at (8.5,2.25) {\includegraphics[width=3.75cm]{build/pvx-linear-discounting}};
-      }
+      \only<3>{\node at (8.5,2) {\includegraphics[width=3.75cm]{build/pvx-linear-discounting-build,beforeeval}};}
+      \only<4>{\node at (8.5,2) {\includegraphics[width=3.75cm]{build/pvx-linear-discounting-build,selectcandidate}};}
+      \only<5>{\node at (8.5,2) {\includegraphics[width=3.75cm]{build/pvx-linear-discounting-build,newcandidate}};}
+      \only<6>{\node at (8.5,2) {\includegraphics[width=3.75cm]{build/pvx-linear-discounting-build,newshared}};}
+      \only<7-8>{\node at (8.5,2) {\includegraphics[width=3.75cm]{build/pvx-linear-discounting-build,newother}};}
+      \only<9>{\node at (8.5,2) {\includegraphics[width=3.75cm]{build/pvx-linear-discounting-build,newaxes}};}
 
-      \only<6->{
+      \only<11->{
          \draw[->,very thick] (5.65,1.9) -- (5.65,1.4);
       
          \node[fill=black!3,draw=black!6,rounded corners] at (5.8,0.8) {\begin{minipage}{5cm}
             Shortest path problem with:
             \vspace{-0.2cm}
             \[
-               w_i(e) = \lambda_U \, \grave{p}_i(e) + (1 - \lambda_U) \, \hat{x}_i(e)
+               w_i(e) = \lambda_U \, \hat{p}_i(e) + (1 - \lambda_U) \, \hat{x}_i(e)
             \]
          \end{minipage}};
       }
       
    \end{tikzpicture}
 \end{frame}
+
 
 % all this data cumulative over the multistep-prescribed problem
 
