a couple of small figure tweaks

--- a/defense-p3-ibid.tex
+++ b/defense-p3-ibid.tex
@@ -89,6 +89,10 @@
    \node[fill=white,align=center,inner sep=2pt] at (11.5,2.0)
       {$\xi$};
 
+   \only<8->{
+      \draw[thick,rounded corners] (lazysp.south west) rectangle (lazysp.north east);
+   }
+
    \end{tikzpicture}
 \end{frame}
 
