--- a/figs/p-estimates-build.tex
+++ b/figs/p-estimates-build.tex
@@ -68,6 +68,8 @@
 \begin{document}%
 \begin{tikzpicture}[font=\small]
 
+\clip (-0.5,-0.45) rectangle (3.6,3.2);
+
 %\draw[black!5] (-0.1,-0.1) rectangle (3.6,3.6);
 %\draw[step=0.5cm,black!20,very thin] (0,0) grid (3.5,3.5);
 
