--- a/defense-p5-family.tex
+++ b/defense-p5-family.tex
@@ -132,16 +132,22 @@
       \node[inner sep=0pt] (herbbin-cropped) at (3.5,6.0) {%
          \href{\tikzvidtarget{herbbin-cropped}}{%
          \includegraphics[width=3.5cm]{videos/herbbin-cropped.png}}};
-      \tikzvidplayat{herbbin-cropped}{herbbin-cropped}{videos/herbbin-cropped.mp4}{}
+      \tikzvidplayat{herbbin-cropped}{herbbin-cropped}{videos/herbbin-cropped.mp4}{-loop 0}
 
       \node[inner sep=0pt] (workcell-cropped) at (8.5,6.0) {%
          \href{\tikzvidtarget{workcell-cropped}}{%
          \includegraphics[width=4cm]{videos/workcell-cropped.png}}};
-      \tikzvidplayat{workcell-cropped}{workcell-cropped}{videos/workcell-cropped.mp4}{}
+      \tikzvidplayat{workcell-cropped}{workcell-cropped}{videos/workcell-cropped.mp4}{-loop 0}
+
+      \tikzvidtargetboth{both-cropped}{herbbin-cropped}{workcell-cropped}
 
       \node at (3.2,2.2) {\includegraphics[height=4cm]{build/multistep-prescribed/herbbinnom-g1ll-lemuronly}};
 
       \node at (8.2,2.2) {\includegraphics[height=4cm]{build/multistep-prescribed/workcell-g1ll-lemuronly}};
       
-   \end{tikzpicture}
+   \end{tikzpicture}%
+   \begin{tikzpicture}[remember picture,overlay]
+      \node[anchor=south west,fill=black!10,inner sep=0pt] at (current page.south west)
+      {\href{\tikzvidtarget{both-cropped}}{\tikz{\node[minimum width=2cm,minimum height=0.3cm]{}}}};
+   \end{tikzpicture}%
 \end{frame}
